--- a/app/src/main/res/drawable/shape_numero_normal.xml
+++ b/app/src/main/res/drawable/shape_numero_normal.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- Efeito no clicar dos botões-->
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="@color/white" />
+    <solid android:color="@color/gelo" />
 </shape>
