--- a/app/src/main/res/drawable/shape_numero_selecionado.xml
+++ b/app/src/main/res/drawable/shape_numero_selecionado.xml
@@ -1,6 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!-- Efeito no clicar dos botões-->
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="@color/black" />
-    />
+    <solid android:color="@color/azulForte" />
 </shape>
