--- a/app/src/main/res/values/Style.xml
+++ b/app/src/main/res/values/Style.xml
@@ -8,14 +8,14 @@
         <item name="android:textSize">28sp</item>
         <item name="android:gravity">center</item>
         <item name="android:textStyle">bold</item>
-        <item name="android:layout_margin">0.5dp</item>
+        <item name="android:layout_margin">2dp</item>
     </style>
     <!-- neste proximos usaremos a propriedade "parent" para herdar
          caracteristicas do "Container_Button" - PAI -->
 
     <style name="Operators_Button" parent="Container_Button">
-        <item name="android:background">@color/black</item>
-        <item name="android:textColor">@color/white</item>
+        <item name="android:background">@drawable/botao_operador_clicado</item>
+        <item name="android:textColor">@color/black</item>
     </style>
 
     <style name="Numbers_Button" parent="Container_Button">
